--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.0",
     "@hotwired/turbo-rails": "^7.2.4",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "flatpickr": "^4.6.13",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0"
   },
